minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello6
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello6
  template:
    metadata:
      labels:
        app: hello6
    spec:
      containers:
      - name: hello6-api
        image: ${IMAGE_HOST}/hello6-api:1.0.0.2
        ports:
        - containerPort: 80
