minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello6-svc
  labels:
    app: hello6-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: hello6
