minikube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello6-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hello6/?(.*)
        backend:
          serviceName: hello6-svc
          servicePort: 80
